--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @product.name %></h2>
 <p><%= @product.description %></p>
-<p><%= @product.price_in_cents %></p>
+<p><%= @product.formatted_price %></p>
 
 <%= link_to "Back", products_url %>
 <%= link_to "Edit Product", edit_product_path %>
