--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,4 +9,4 @@
 <!-- the first product tells us where to take the name. -->
 <!-- the second product tells us where to go -->
 
-<%= link_to "Create a new", new_product_path %>
+<%= link_to "Create a New Product", new_product_path %>
