--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<% if flash[:notice] %>
+   		<%= flash[:notice] %></p>
+    <% end %>
+    
+    <% if flash[:alert] %>
+    	<%= flash[:alert] %></p>
+    <% end %>
+
 
 <%= yield %>
 
