--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @product do |form| %>
+<%= form_for @product :remote => true do |form| %>
 
  	<% if @product.errors.any? %>
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
