--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,8 @@
 <h1>New Product</h1>
 
-<%= render :partial => 'form' %>
+<%= render :partial => "form" %>
 
-<%= link_to "Back", products_url  %>
+<br />
+
+<%= link_to "Back to Products", products_url %>
 
